<resources>
    <string name="app_name">AndroidKakebo</string>
    <string name="home">Inicio</string>
    <string name="statistics">Estadísticas</string>
    <string name="settings">Ajustes</string>
    <string name="income">Ingresos</string>
    <string name="outcome">Gastos</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="done">Hecho</string>
    <string name="categories">Categorías</string>
    <string name="first_day">Primer día de mes</string>
    <string name="monthly_target">Objetivo mensual</string>
    <string name="notifications">Notificaciones</string>
    <string name="category_name_hint">Nombre</string>
    <string name="amount_hint" translatable="false">0.00€</string>
    <string name="new_category">Nueva Categoría</string>
    <string name="new_income">Vamos a agregar un nuevo ingreso de %1s€</string>
    <string name="new_outcome">Vamos a agregar un nuevo gasto de %1s€</string>
    <string name="remove_income">Vamos a eliminar un ingreso de %1.2f€</string>
    <string name="remove_outcome">Vamos a eliminar un gasto de %1.2f€</string>
    <string name="new_transaction">Nueva Transacción</string>
    <string name="edit_transaction">Editar Transacción</string>
    <string name="confirm_title">¿Estás seguro?</string>
    <string name="date_tools">1 de Enero de 2019</string>
    <string name="time_tools"> a las 00:00</string>
    <string name="every_tools">Cada 3 semanas</string>
    <string name="period_title">Periodo</string>
    <string name="no_period">No automatico</string>
    <string name="period" translatable="false">%1d %2s</string>
    <string name="new_edit_income">Vamos a editar un ingreso de %1s€</string>
    <string name="new_edit_outcome">Vamos a editar un gasto de %1s€</string>
    <string name="amount_placeholder" translatable="false">%1.2f€</string>
    <string name="cada">Cada</string>
    <string name="one" translatable="false">1</string>
</resources>
