<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_big">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_title"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_normal"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_small"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:text="@string/new_income" />

    <TextView
        android:id="@+id/accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        android:text="@string/accept"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_small"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        android:layout_marginEnd="@dimen/margin_big"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_small"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/accept"
        app:layout_constraintTop_toBottomOf="@+id/message" />


</androidx.constraintlayout.widget.ConstraintLayout>