<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_big">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/period_title"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_big"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin"
            android:text="@string/cada"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_normal" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin"
            android:inputType="number"
            android:text="@string/one"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_normal" />

        <Spinner
            android:id="@+id/period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/period" />
    </LinearLayout>

    <TextView
        android:id="@+id/accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        android:text="@string/accept"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_small"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        android:layout_marginEnd="@dimen/margin_big"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_small"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/accept"
        app:layout_constraintTop_toBottomOf="@+id/container" />


</androidx.constraintlayout.widget.ConstraintLayout>