<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.categories.CategoryActivity">

    <com.alavpa.androidkakebo.views.KakeboBar
        android:id="@+id/kakeboBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:theme="@style/AppTheme.AppBarOverlay"
        app:titleBar="@string/categories" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_big"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category_name_hint"
            android:textSize="@dimen/font_normal"
            app:layout_constraintTop_toTopOf="parent" />

        <com.alavpa.androidkakebo.views.KakeboSwitch
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_big"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:text1="@string/income"
            app:text2="@string/outcome"
            app:selected="1"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/icons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_big"
            app:layout_constraintTop_toBottomOf="@+id/type" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/margin_big"
        android:src="@drawable/ic_round_save_24px"
        android:tint="@color/white" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
