<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/first_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_big"
        android:text="@string/first_day"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/first_day_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_big"
        android:text="@string/first_day"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/separator_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/first_day" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/monthly_target"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_big"
        android:text="@string/monthly_target"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_normal"
        app:layout_constraintTop_toTopOf="@+id/separator_1" />

    <FrameLayout
        android:id="@+id/separator_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/monthly_target" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_big"
        android:text="@string/categories"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_normal"
        app:layout_constraintTop_toTopOf="@+id/separator_2" />

    <FrameLayout
        android:id="@+id/separator_3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/categories" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_big"
        android:text="@string/notifications"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_normal"
        app:layout_constraintTop_toTopOf="@+id/separator_3" />

    <FrameLayout
        android:id="@+id/separator_4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/notifications" />

</androidx.constraintlayout.widget.ConstraintLayout>
